--- a/about.css
+++ b/about.css
@@ -26,8 +26,8 @@
 	flex: 0 0 auot;
 }
 img {
-	width: 80vh;
-    height: 70vh;
+	width: 50vh;
+    height: 50vh;
 	display: inline-block;
 }
 .aboutintro {
@@ -66,6 +66,10 @@ img {
 	font-family: Helvetica;
 	font-size: 1rem;
 	color: #555;
+}
+.footerletter {
+  text-decoration: none;
+  color: #555555;
 }
 .email {
 	flex: auto;
