--- a/style.css
+++ b/style.css
@@ -17,11 +17,12 @@ h1 {
 	color: white;
 	cursor: pointer;
 	text-rendering: optimizeLegibility;
-	
+
 }
 #red {
 	color: red;
 }
+
 
 .container {
     padding: 32px;
@@ -30,6 +31,10 @@ h1 {
     text-align: initial;
 }
 
+a {
+  text-decoration: none;
+  color: red;
+}
 
 
 html, body {
