--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .website-background-black {
 	background-color: white;
-	background-image: url(image/white.JPG);
 	background-repeat: no-repeat;
 	background-position: right top;
     background-size: cover;
@@ -33,7 +32,7 @@ h1 {
 
 a {
   text-decoration: none;
-  color: red;
+  color: #11698e;
 }
 
 
@@ -49,9 +48,31 @@ html, body {
     overflow: hidden;
     font-size: calc(1em + 0.2vw);
 }
+/* model */
+.bg-modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
+}
+/*.modal-content {
+  width: 1200px;
+  height: 600px;
+  background-color: white;
 
-
+}*/
+.modal-content h4 {
+  font-family: Helvetica;
+  color: #353535;}
+}
+.huge-text {
+  font-family: Helvetica;
+  color: #353535;}
 
 
 
