--- a/work.css
+++ b/work.css
@@ -9,9 +9,13 @@ section {
   position: relative;
   width: 100%;
 }
-@media (min-height: 620px) and (min-width: 768px), (min-width: 1280px) section.home-top {
+@media (min-height: 620px) and (min-width: 300px), (min-width: 1280px) section.home-top {
   padding-top: 140px
 }
+@media only screen
+    and (device-width: 428px)
+    and (device-height: 926px)
+    and (-webkit-device-pixel-ratio: 3) { }
 .container {
   position: relative;
 
@@ -27,7 +31,6 @@ section {
   position: absolute;
   top: 8rem;
   margin-left: 6rem;
-
 
 }
 .banner-header-row {
@@ -59,7 +62,7 @@ section {
 
 /* project */
 
-@media (min-height: 620px) and (min-width: 1280px) section.project {
+@media (min-height: 620px) and (min-width: 300px) section.project {
   padding-top: 140px;
 }
 
@@ -74,7 +77,7 @@ section {
 .project-image {
   display: block;
   width: 30vh;
-  height: 55vh;
+  height: 60vh;
 }
 .project-list {
   justify-content: space-evenly;
@@ -82,6 +85,9 @@ section {
   margin: 0 auto;
   display:flex;
   position: relative;
+}
+.project-wrapper {
+  display: flex;
 }
 .overlay-content {
   white-space: nowrap;
